Fix sidebar pseudo-element and adjust alignment in sidebar-bottom for improved layout

--- a/assets/css/jekyll-theme-chirpy.scss
+++ b/assets/css/jekyll-theme-chirpy.scss
@@ -41,6 +41,12 @@
 }
 
 #sidebar {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  display: flex;
+  flex-direction: column;
+
   .site-title {
     color: #c3c3c3;
     text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
@@ -53,7 +59,7 @@
 
   .sidebar-bottom {
     flex-direction: column;
-    align-items: flex-start;
+    align-items: flex-end;
     padding: 1rem;
     gap: 1rem;
 
